--- a/_posts/2022-03-16-os-study-03.md
+++ b/_posts/2022-03-16-os-study-03.md
@@ -60,7 +60,7 @@ last_modified_at: 2022-03-16
 
 ### 🌟 프로세스 상태도
 
-![Untitled](https://s3-us-west-2.amazonaws.com/secure.notion-static.com/b44caae9-da70-413e-83cd-ff1535e7bbfc/Untitled.png)
+![image](https://user-images.githubusercontent.com/67252475/158180436-40a50fc5-2c26-4935-a195-b00796adbc1a.png)
 
 ## 2. PCB
 
@@ -100,10 +100,8 @@ last_modified_at: 2022-03-16
 스위칭보다 상당한 오버헤드가 발생한다.
 ```
 
-<aside>
-💡 프로세스의 문맥이란 프로세스 실행상태와 프로세스 자원 등 커널에서 관리하는 **프로세스 실행 정보**를  ****를 말한다.
+💡 프로세스의 문맥이란 프로세스 실행상태와 프로세스 자원 등 커널에서 관리하는 **프로세스 실행 정보**를 말한다.
 
-</aside>
 
 ## 4. 프로세스를 스케줄링하기 위한 큐
 
@@ -121,10 +119,9 @@ last_modified_at: 2022-03-16
 
  
 
-<aside>
-💡 이와 같은 큐는 소프트웨어 자원을 기다리는 경우에도 필요하다. 예를 들면 공유 데이터에 대한 접근 권한은 소프트웨어 자원으로 분류될 수 있다. 어떠한 프로세스가 공유 데이터를 사용하는 중에 다른 프로세스가 같은 데이터를 접근하면 일관성이 훼손될 수 있기 때문에 매 시점 하나의 프로세스만이 접근할 수 있도록 해야한다.
 
-</aside>
+>💡 이와 같은 큐는 소프트웨어 자원을 기다리는 경우에도 필요하다. 예를 들면 공유 데이터에 대한 접근 권한은 소프트웨어 자원으로 분류될 수 있다. 어떠한 프로세스가 공유 데이터를 사용하는 중에 다른 프로세스가 같은 데이터를 접근하면 일관성이 훼손될 수 있기 때문에 매 시점 하나의 프로세스만이 접근할 수 있도록 해야한다.
+
 
 ## 5. 스케줄러 (Scheduler)
 
@@ -148,14 +145,13 @@ last_modified_at: 2022-03-16
 - 프로세스에게서 memory를 뺏는 문제
 - degree of Multiprogramming을 제어
 
-<aside>
-💡 스왑아웃 대상 0순위는 봉쇄상태의 프로세스다.
 
-봉쇄상태의 프로세스를 스왑아웃 시켜도 메모리가 부족하면 타이머 인터럽트가 발생하여 준비큐로 이동하는 프로세스를 추가적으로 스왑아웃 시킨다.
+>💡 스왑아웃 대상 0순위는 봉쇄상태의 프로세스다.
+>
+>봉쇄상태의 프로세스를 스왑아웃 시켜도 메모리가 부족하면 타이머 인터럽트가 발생하여 준비큐로 이동하는 프로세스를 추가적으로 스왑아웃 시킨다.
+>
+>준비큐에 너무 많은 프로세스가 존재하면 개별 프로세스에 배정되는 메모리양이 지나치게 적어지고 CPU를 한번 할당받은 후 다시 할당받기 까지 오랜 시간이 소요되기 때문이다.
 
-준비큐에 너무 많은 프로세스가 존재하면 개별 프로세스에 배정되는 메모리양이 지나치게 적어지고 CPU를 한번 할당받은 후 다시 할당받기 까지 오랜 시간이 소요되기 때문이다.
-
-</aside>
 
 ## 6. Thread
 
@@ -188,10 +184,8 @@ last_modified_at: 2022-03-16
 
 - 멀티 프로세스의 경우 각각의 프로세스마다 자원을 별도로 생성하는 반면, 멀티 스레드는 CPU 수행과 관련된 부분만 생성하고 code, data, os 자원같은 경우 프로세스의 메모리 영역을 참조한다.
 
-<aside>
-💡 멀티 쓰레드 웹 서버를 예로 들면, 한 요청이 끝날 때까지 기다렸다가 다음 요청을 처리하는 게 아닌 쓰레드마다 각각의 요청을 처리할 수 있다.
 
-</aside>
+>💡 멀티 쓰레드 웹 서버를 예로 들면, 한 요청이 끝날 때까지 기다렸다가 다음 요청을 처리하는 게 아닌 쓰레드마다 각각의 요청을 처리할 수 있다.
 
 ## 7. Thread 의 장점
 
