[blog] 운영체제 스터디 포스팅 출처 추가

--- a/_posts/2022-03-15-os-study-02.md
+++ b/_posts/2022-03-15-os-study-02.md
@@ -18,6 +18,9 @@ last_modified_at: 2022-03-15
 comments: true
 ---
 
+🌟 본 게시물은 이화여자대학교 반효경 교수님 강의를 참고로 작성한 게시물 입니다. 틀린 내용은 꼬옥 지적 부탁드립니다 ! 🌟
+
+
 ## 1. 컴퓨터 구조
 
 ![https://user-images.githubusercontent.com/56028408/157796926-1bb83571-56ea-404a-b551-048cb898fdaf.png](https://user-images.githubusercontent.com/56028408/157796926-1bb83571-56ea-404a-b551-048cb898fdaf.png)
