--- a/_posts/2022-03-16-os-study-03.md
+++ b/_posts/2022-03-16-os-study-03.md
@@ -19,6 +19,9 @@ date: 2022-03-16
 last_modified_at: 2022-03-16
 ---
 
+🌟 본 게시물은 이화여자대학교 반효경 교수님 강의를 참고로 작성한 게시물 입니다. 틀린 내용은 꼬옥 지적 부탁드립니다 ! 🌟
+
+
 ## 1. 프로세스
 
 > “Process is a program in execution”
