--- a/_posts/2022-03-17-os-study-01.md
+++ b/_posts/2022-03-17-os-study-01.md
@@ -17,6 +17,9 @@ date: 2022-03-14
 last_modified_at: 2022-03-14
 ---
 
+🌟 본 게시물은 이화여자대학교 반효경 교수님 강의를 참고로 작성한 게시물 입니다. 틀린 내용은 꼬옥 지적 부탁드립니다 ! 🌟
+
+
 ## 1. 운영체제란 무엇인가?
 
 > 컴퓨터 하드웨어 바로 윗단에 설치되는 소프트웨어를 말한다.
