--- a/_posts/2022-03-22-os-study-04-02.md
+++ b/_posts/2022-03-22-os-study-04-02.md
@@ -18,6 +18,9 @@ date: 2022-03-22
 last_modified_at: 2022-03-22
 ---
 
+🌟 본 게시물은 이화여자대학교 반효경 교수님 강의를 참고로 작성한 게시물 입니다. 틀린 내용은 꼬옥 지적 부탁드립니다 ! 🌟
+
+
 ## 1. CPU and I/O Bursts In Program Execution
 
 > 어떤 프로그램이든 프로그램을 실행한다는 것은 CPU Burst와 I/O Burst를 반복하게 되는 것이다.
