--- a/_posts/2022-03-22-os-study-04.md
+++ b/_posts/2022-03-22-os-study-04.md
@@ -17,6 +17,9 @@ date: 2022-03-22
 last_modified_at: 2022-03-22
 ---
 
+🌟 본 게시물은 이화여자대학교 반효경 교수님 강의를 참고로 작성한 게시물 입니다. 틀린 내용은 꼬옥 지적 부탁드립니다 ! 🌟
+
+
 
 ## 1. 프로세스와 관련한 시스템 콜
 
