--- a/_posts/2022-04-02-os-study-07.md
+++ b/_posts/2022-04-02-os-study-07.md
@@ -15,6 +15,7 @@ comments: true
 date: 2022-04-02
 last_modified_at: 2022-04-02
 ---
+🌟 본 게시물은 이화여자대학교 반효경 교수님 강의를 참고로 작성한 게시물 입니다. 틀린 내용은 꼬옥 지적 부탁드립니다 ! 🌟
 
 # Process Synchronization(Concurrency)
 ### ‼️  프로세스 동기화와 관련된 3가지 문제
