[blog] 운영체제 스터디 10 회차 포스팅

--- a/_posts/2022-04-15-os-study-09.md
+++ b/_posts/2022-04-15-os-study-09.md
@@ -16,7 +16,7 @@ last_modified_at: 2022-04-15
 ---
 🌟 본 게시물은 이화여자대학교 반효경 교수님 강의를 참고로 작성한 게시물 입니다. 틀린 내용은 꼬옥 지적 부탁드립니다 ! 🌟
 
-# 🗳️ Memory Management
+# 🗳️ Memory Management 1
 
 ## 1. 논리적 주소와 물리적 주소
 
